<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="600dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#332196F3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/light_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_add_password_dialog_title"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="11dp">

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edt_title"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_border"
            android:layout_marginBottom="11dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:padding="10dp"
            android:inputType="text"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/edtAccount"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edt_account"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_border"
            android:layout_marginBottom="11dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:padding="10dp"
            android:inputType="text"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edt_username"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_border"
            android:layout_marginBottom="11dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:padding="10dp"
            android:inputType="text"
            android:autofillHints="username"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edt_password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_border"
            android:layout_marginBottom="11dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <Spinner
            android:id="@+id/passwordTypeSpinner"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/savePasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/save_btn"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_blue"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

</LinearLayout>