<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgIconPassword"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/image_content_description"
                    android:src="@drawable/icon_password_recycler_view"/>

                <TextView
                    android:id="@+id/txtImageIconPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_image_icon_password"
                    android:textSize="32sp"
                    android:textColor="@color/white"
                    android:layout_alignLeft="@+id/imgIconPassword"
                    android:layout_alignStart="@+id/imgIconPassword"
                    android:layout_alignTop="@+id/imgIconPassword"
                    android:layout_alignRight="@+id/imgIconPassword"
                    android:layout_alignEnd="@+id/imgIconPassword"
                    android:layout_alignBottom="@+id/imgIconPassword"
                    android:layout_margin="1dp"
                    android:gravity="center" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/txtAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_account"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_username"
                    android:textSize="16sp"
                    />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/light_blue"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>