<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edt_title"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:padding="10dp"
        android:inputType="text"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/edtAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edt_account"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:padding="10dp"
        android:inputType="text"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edt_username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:padding="10dp"
        android:inputType="text"
        android:autofillHints="username"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edt_password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_border"
            android:layout_marginBottom="11dp"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:autofillHints="password"/>

        <CheckBox
            android:id="@+id/showPasswordCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/passwordTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"/>

</LinearLayout>